<resources>
    <string name="app_name">Tr2_android</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email_hint">Email</string>
    <string name="senha_hint">Senha</string>
    <string name="botao_login">Login</string>
    <string name="esqueceu_senha">Esqueceu a senha?</string>
    <string name="inscrever">Inscreva-se</string>
    <string name="title_activity_tela_principal">TelaPrincipal</string>
    <string name="servidor">Servidor</string>
    <string name="nome">Nome</string>
    <string name="para_testes">Para testes...</string>

</resources>
