<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TelaLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:id="@+id/linearLayout">


        <EditText
            android:id="@+id/edEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:hint="Email"  />

        <EditText
            android:id="@+id/edSenha"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/senha_hint"   />

        <EditText
            android:id="@+id/edServidor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text|textNoSuggestions"
            android:hint="@string/servidor"   />

        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/botao_login" />

        <Button
            android:id="@+id/teste"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/para_testes" />

    </LinearLayout>

</RelativeLayout>
